test docs config

--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,20 @@ remote_theme: just-the-docs/just-the-docs
 
 plugins:
   - jekyll-remote-theme # add this line to the plugins list if you already have one
+
+color_scheme: dark
+
+callouts:
+  warning:
+    title: Warning
+    color: red
+
+note:
+  warning:
+    title: Note
+    color: green
+
+highlight:
+  warning:
+    title: Highlight
+    color: yellow
